# ytm

./: .gitignore  README.md  install.sh  pyproject.toml
src/ytm_cli/: __init__.py  api.py  auth.py  browser_auth.py  main.py  player.py  tray.py
