[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ytm-cli"
version = "0.1.0"
description = "A CLI interface for YouTube Music"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [
    { name = "Jack Elston" }
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "ytmusicapi>=1.3.0",
    "yt-dlp>=2023.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
ytm = "ytm_cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ytm_cli"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
